# ResolveTools

./: README.md  pyproject.toml  requirements.txt  requirements.txt.txt
.github/workflows/: python-build.yaml
analysis/: post.py  pseudotime.py
baysor/: cell.py  roi.py  stitching.py  utils.py  visualization.py
image/: lif.py  utils.py
registration/: register3D.py  registerSIFT.py  registerTiles.py
resolve/: resolveimage.py
scripts/BQCluster/: baysor  install_snakemake.sh  load_modules.sh  load_snakemake.sh  pull_baysor.sh  run_singularity_baysor.sh  run_singularity_mesmer-gpu.sh  run_singularity_mesmer.sh  submit_interactive-gpu.sh  submit_interactive-small.sh  submit_interactive-smallbigmem.sh  submit_interactive.sh
scripts/baysor/: 01.1_transcripts.py  01.2_transcripts.snakemake  03.1_combine.py  04.1.1_baysor_combined_wmesmer_noMCh.sh  04.1.1_baysor_referenceN21.sh  04.1.2_baysor_referenceN21_id.py  04.2.1_baysor_combined.sh  04.2.2_process_simple.py  04.2.3_process_custom.py  04.2.4_process_custom.sh  04.2.5_add_region.py  04.2.6_combine_final.py  04.3.1_baysor_combined_wmesmer.sh  04.3.2_process_simple.py  04.3.3_process_custom.py  04.3.4_process_custom.sh  04.3.5_add_region.py  04.3.6_combine_final.py  04.3.7_do_all.sh  README.txt
scripts/baysor/config/: resolve.toml  resolve_scale1.toml  resolve_scale2.toml
scripts/baysor/scripts/: README.txt  final_01_process_simple.py  final_02_process_custom.py  final_03_add_region.py  final_04_add_stain.py  final_05_combine_final.py  final_06_add_QC.py  final_07_assignment_plots.py  final_do_all.sh  final_submit_do_all.sh
scripts/confocal/: 01.1_prepare.py  01.2.1_clip_copy.py  01.2.2_clip_copy_submit.sh  01.3_clip_copy.sh  01.4_make_max.py  02.1_postprocess.py  02.2_postprocess.sh  02.3_postprocess.snakemake  02.4_postprocess_meta.py  02.5_postprocess_meta.snakemake  03.1_annotation_images.py  03.2_annotation_process.py  03.3_annotation_allmeta.py  README.txt  do.sh
scripts/resolve/: 01_R1_copy_rename.py  01_R2_copy_rename.py  02_QC.ipynb  03.1_register2D.py  03.2_register2D.sh  04.1_register3D.py  05.1_counts_naive.py
scripts/snakemake/slurmsingularitysingle/: config.yaml
scripts/snakemake/slurmsingularitysinglebigmem/: config.yaml
segmentation/: baysor.py  brainregions.py  counts.py  gbm_annotate.txt  postprocess.py  utils.py  visualize.py
singularity/: memser.def  mesmer-gpu.def
src/resolve_tools/analysis/: post.py
src/resolve_tools/baysor/: roi.py  visualization.py
src/resolve_tools/image/: lif.py  utils.py
src/resolve_tools/registration/: register3D.py  registerSIFT.py  registerTiles.py
src/resolve_tools/resolve/: resolveimage.py
src/resolve_tools/segmentation/: counts.py  mesmer.py  (+2 more)
utils/: parameters.py
(+3 files in other folders)
