[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resolve_tools"
version = "0.0.1"
authors = [
  { name="Valentin Wüst", email="" },
]
description = "Analyse Resolve Molecular Cartography data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/anders-biostat/ResolveTools"
"Bug Tracker" = "https://github.com/anders-biostat/ResolveTools/issues"
