[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resolve_tools"
dependencies = [
    # File formats
    "readlif>=0.6.0",
    "tifffile>=2022.5.4",
    # Image processing
    "scikit-image>=0.19.2",
    "opencv-python>=4.7.0",
    # Various data analysis tools
    "scikit-misc>=0.1.4",
    "pandas>=1.4.2",
    "numpy>=1.22.1",
    "scipy>=1.8.1",
    "openpyxl>=3.0.10",
    "numba>=0.56.4",
    "loompy>=3.0.7",
    "scanpy>=1.9.1",
]
version = "0.0.1"
authors = [
  { name="Valentin Wüst", email="" },
]
description = "Analyse Resolve Molecular Cartography data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/anders-biostat/ResolveTools"
"Bug Tracker" = "https://github.com/anders-biostat/ResolveTools/issues"
